--- a/PCE2020/Packages/manifest.json
+++ b/PCE2020/Packages/manifest.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "com.unity.2d.pixel-perfect": "3.0.2",
+    "com.unity.2d.psdimporter": "3.1.6",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.3.9",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.entities": "0.16.0-preview.21",
