--- a/PCE2020/Packages/manifest.json
+++ b/PCE2020/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.5",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.0",
     "com.unity.mathematics": "1.2.1",
     "com.unity.rendering.hybrid": "0.10.0-preview.21",
     "com.unity.test-framework": "1.1.18",
