--- a/PCE2020/Packages/manifest.json
+++ b/PCE2020/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.inputsystem": "1.0.0",
     "com.unity.mathematics": "1.2.1",
+    "com.unity.physics": "0.5.1-preview.2",
     "com.unity.rendering.hybrid": "0.10.0-preview.21",
     "com.unity.test-framework": "1.1.18",
     "com.unity.textmeshpro": "3.0.3",
