--- a/PCE2020/Packages/manifest.json
+++ b/PCE2020/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.platforms": "0.9.0-preview.9",
     "com.unity.platforms.web": "0.9.0-preview.9",
     "com.unity.platforms.windows": "0.9.0-preview.9",
+    "com.unity.render-pipelines.universal": "8.2.0",
     "com.unity.rendering.hybrid": "0.10.0-preview.21",
     "com.unity.shadergraph": "8.2.0",
     "com.unity.test-framework": "1.1.18",
